@@ -133,6 +133,7 @@ Basic tasks:
 - run build: Build artifacts in the dist/ directory
 - run test: Run the unit tests (use --help to see other options)
 - run suite: Run the complete test suite, as for the GitHub Actions CI build
+- run suite -f: Run a faster version of the test suite, ommitting some steps
 - run clean: Clean the source tree
 
 Additional tasks:
